--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section>
 
             <fieldset>
-                <label for="quantAlt">Quantidade de Alturas: </label>
+                <label for="quantAlt">Quantidade de Alturas (1 a 6): </label>
                 <input type="number" name="quantAlt" id="quant" class="campo" min="0" max="6">
                 <input type="button" value="OK" onclick="abilitar()">
             </fieldset>
