--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             background: white;
             border-radius: 10px;
             padding: 15px;
-            width: 550px;
+            width: 90%;
             margin: auto;
             box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.363);
         }
