--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         }
 
         footer {
+            font-size: 15pt;
             color: white;
             text-align: center;
             font-style: italic;
