--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <header>
-        <h1>Calcular Metros de Lenha</h1>
+        <h1>Calcule Metros de Lenha</h1>
     </header>
     <section>
 
